--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -128,8 +128,8 @@
                 браузер Safari считывает данную информацию и отображает в заголовке.
             </p>
             <p>
-                Например, для новостного сайта можно использовать файл RSS. В него записывается информация о страницах. Если Вы
-                посмотрите новостные сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
+                Например, для медиа сайта можно использовать файл RSS. В него записывается информация о страницах. Если Вы
+                посмотрите медиа сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
                 RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала Ваши последние страницы.
             </p>
             <h3>«Чистый» PHP или Laravel</h3>
