--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -20,7 +20,7 @@
                 <div class="col">
                     <div>
                         <a href="#" target="_blank" class="footer--icon-link"
-                            aria-label="Открыть новости Спешиал в телеграме">
+                            aria-label="Открыть медиа Спешиал в телеграме">
                             <svg width="85" xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 100 100" class="footer-icon">
                                 <path
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
                             <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
                                 <path
                                     d="M53 73.8c-22.7 0-35.7-15.6-36.3-41.6h11.4c.4 19.1 8.8 27.2 15.5 28.8V32.2h10.7v16.5c6.6-.7 13.5-8.2 15.8-16.5h10.8C79 42.4 71.5 49.9 66.2 52.9c8.4 4.2 14.7 11.8 17.2 20.9H71.5c-2.5-7.9-8.9-14-17.2-14.9v14.9H53z" />
@@ -41,7 +41,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
                             <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
                                 <path
                                     d="M49.1 17.2C48.9 30.5 48 38 43 43s-12.4 5.8-25.8 6v2c13.3.2 20.7 1 25.7 6s5.9 12.4 6.1 25.7h2c.2-13.2 1.1-20.7 6-25.7s12.4-5.9 25.7-6v-2C69.5 48.9 62 48 57 43s-5.8-12.5-6-25.7l-1.9-.1z" />
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть новости Спешиал в телеграме">
+                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
                             <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
                                 <path
                                     d="M76.7 33.1c-2.1-2.5-6-3.5-13.3-3.5H36.6c-7.5 0-11.5 1.1-13.6 3.7s-2 6.4-2 11.7v10c0 10.2 2.4 15.4 15.6 15.4h26.8c6.4 0 10-.9 12.2-3.1S79 61.4 79 55V45c0-5.6-.2-9.4-2.3-11.9zM58.2 51.4 46 57.8c-.3.1-.6.2-.9.2-.4 0-.7-.1-1-.3-.6-.3-.9-.9-.9-1.6V43.4c0-.7.4-1.3.9-1.6.6-.3 1.3-.4 1.8-.1L58.1 48c.9.5 1.3 1.6.8 2.5 0 .4-.3.7-.7.9z" />
