--- a/src/parts/head.html
+++ b/src/parts/head.html
@@ -3,19 +3,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Special — новостной канал: удобный и красивый">
-    <meta name="keywords" content="спешиал, новости, креагу, даниил дыбка, дыбка, дыбка новости">
+    <meta name="description" content="Special — полезное медиа в удобном формате">
+    <meta name="keywords" content="спешиал, медиа, креагу, даниил дыбка, дыбка, дыбка медиа">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Special — новостной канал: удобный и красивый">
-    <meta property="og:site_name" content="Special — новостной канал: удобный и красивый">
-    <meta property="og:description" content="Special — новостной канал: удобный и красивый">
+    <meta property="og:title" content="Special — полезное медиа в удобном формате">
+    <meta property="og:site_name" content="Special — полезное медиа в удобном формате">
+    <meta property="og:description" content="Special — полезное медиа в удобном формате">
     <meta property="og:url" content="https://news.dybka.ru/">
     <meta property="og:image" content="https://news.dybka.ru/img/logo/cap.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Special — новостной канал: удобный и красивый">
-    <meta name="twitter:description" content="Special — новостной канал: удобный и красивый">
+    <meta name="twitter:title" content="Special — полезное медиа в удобном формате">
+    <meta name="twitter:description" content="Special — полезное медиа в удобном формате">
     <meta name="twitter:site" content="https://news.dybka.ru/">
     <meta name="twitter:image" content="https://news.dybka.ru/img/logo/ico.ico">
     <meta name="Author" content="Дыбка Даниил">
@@ -26,7 +26,7 @@
     }
 
     @@if(context.title == "") {
-        <title>Special — полезные новости в удобном формате</title>
+        <title>Special — полезное медиа в удобном формате</title>
     }
 
     <link rel="icon" href="/img/logo/ico.ico" type="image/x-icon">
