--- a/src/html/about.html
+++ b/src/html/about.html
@@ -27,7 +27,7 @@
 
             <h2>Что такое Special?</h2>
             <p>
-                Special — это открытый источник новостей от сайта <a href="//dybka.ru" class="link">dybka.ru</a>,
+                Special — это открытый источник медиа от сайта <a href="//dybka.ru" class="link">dybka.ru</a>,
                 <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других сайтов,
                 принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
             </p>
@@ -41,13 +41,13 @@
         <div class="fs-5 mb-5">
             <h2>Стать автором</h2>
             <p>
-                У Вас есть возможность предложить интересную новость, статью или тему для обсуждения. Для
-                добавления Вас в качестве автора на сайте новостей Special достаточно обратиться
-                на почтовый адрес, указанный внизу страницы и предложить свою новость.
+                У Вас есть возможность предложить интересную статью или тему для обсуждения. Для
+                добавления Вас в качестве автора на сайте медиа Special достаточно обратиться
+                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
             </p>
             <p>
-                Ваша заявка будет рассмотрена. В случае успеха новости будет предложено выбрать
-                аватарку для отображения на страницах и Ваша новость будет опубликована
+                Ваша заявка будет рассмотрена. В случае успеха поста будет предложено выбрать
+                аватарку для отображения на страницах и Ваш пост будет опубликован
                 на сайте Special.
             </p>
         </div>
@@ -59,9 +59,9 @@
                 которые могут вызвать общих негатив у людей.
             </p>
             <p>
-                Главная цель новостей Special — донести информацию для людей удобным способом. Сюда не
-                входят задачи разжигания ненависти и оскорбления людей. Все публикуемые новости проходят
-                проверку модераторами. Опубликовать новость без согласия не представляется возможным.
+                Главная цель медиа Special — донести информацию для людей удобным способом. Сюда не
+                входят задачи разжигания ненависти и оскорбления людей. Все публикуемые посты проходят
+                проверку модераторами. Опубликовать пост без согласия не представляется возможным.
             </p>
         </div>
         <div class="fs-5 mb-5">
