--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,20 +10,36 @@
     })
 
     <main class="container">
+
         <div class="border-bottom mb-5">
-            <h1>О проекте Special</h1>
+            <h1>Ссылки Special</h1>
         </div>
         <div class="fs-5 mb-5">
 
             <ul class="mb-4">
-                <li>О проекте Special</li>
-                <li><a href="updates.html" class="link">
-                    Обновления Special
-                </a></li>
+                <li>О проекте Special (текущая страница)</li>
+                <li><a href="/updates.html" class="link">
+                        Обновления Special
+                    </a></li>
+                <li><a href="/rss.xml" class="link">
+                        Получить RSS статей
+                    </a></li>
+                <li><a href="/updates.xml" class="link">
+                        Получить RSS обновлений
+                    </a></li>
+                <li><a href="/translate.html" class="link">
+                        Перевод сайта
+                    </a></li>
                 <li><a href="//it.dybka.ru" target="_blank" class="link">
-                    Еще больше от dybka.ru
-                </a></li>
+                        Еще больше от dybka.ru
+                    </a></li>
             </ul>
+        </div>
+
+        <div class="border-bottom mb-5">
+            <h1>О проекте Special</h1>
+        </div>
+        <div class="fs-5 mb-5">
 
             <h2>Что такое Special?</h2>
             <p>
