--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -16,13 +16,14 @@
 <footer role="contentinfo" class="footer--main">
     <div class="container container--main">
         <div class="container mb-3 text-center">
-            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
+            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 align-items-center">
+                <div class="col">
+                    <p class="card--title fs-4 mb-0 text-start">Читайте Special</p>
+                </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link"
-                            aria-label="Открыть медиа Спешиал в телеграме">
-                            <svg width="85" xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 100 100" class="footer-icon">
+                        <a href="//t.me/specialtg" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
+                            <svg width="64" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon-tg">
                                 <path
                                     d="m38 60.6 23.7 17.5c2.7 1.5 4.7.7 5.3-2.5l9.7-45.5c1-4-1.5-5.7-4.1-4.6L16 47.4c-3.9 1.6-3.8 3.7-.7 4.7l14.6 4.6 33.7-21.2c1.6-1 3-.4 1.9.6L38 60.6z" />
                             </svg>
@@ -31,8 +32,8 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
-                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                        <a href="//vk.com/getspecial" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в ВК">
+                            <svg width="64" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon-vk">
                                 <path
                                     d="M53 73.8c-22.7 0-35.7-15.6-36.3-41.6h11.4c.4 19.1 8.8 27.2 15.5 28.8V32.2h10.7v16.5c6.6-.7 13.5-8.2 15.8-16.5h10.8C79 42.4 71.5 49.9 66.2 52.9c8.4 4.2 14.7 11.8 17.2 20.9H71.5c-2.5-7.9-8.9-14-17.2-14.9v14.9H53z" />
                             </svg>
@@ -41,8 +42,8 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
-                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                        <a href="//dzen.ru/specialnews?share_to=link" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в Яндекс Дзене">
+                            <svg width="64" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon-dzen">
                                 <path
                                     d="M49.1 17.2C48.9 30.5 48 38 43 43s-12.4 5.8-25.8 6v2c13.3.2 20.7 1 25.7 6s5.9 12.4 6.1 25.7h2c.2-13.2 1.1-20.7 6-25.7s12.4-5.9 25.7-6v-2C69.5 48.9 62 48 57 43s-5.8-12.5-6-25.7l-1.9-.1z" />
                             </svg>
@@ -51,10 +52,12 @@
                 </div>
                 <div class="col">
                     <div>
-                        <a href="#" target="_blank" class="footer--icon-link" aria-label="Открыть медиа Спешиал в телеграме">
-                            <svg width="85" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon">
+                        <a href="//news.dybka.ru" target="_blank" class="footer--icon-link" aria-label="Открыть сайт медиа Спешиал">
+                            <svg width="44" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="footer-icon">
                                 <path
-                                    d="M76.7 33.1c-2.1-2.5-6-3.5-13.3-3.5H36.6c-7.5 0-11.5 1.1-13.6 3.7s-2 6.4-2 11.7v10c0 10.2 2.4 15.4 15.6 15.4h26.8c6.4 0 10-.9 12.2-3.1S79 61.4 79 55V45c0-5.6-.2-9.4-2.3-11.9zM58.2 51.4 46 57.8c-.3.1-.6.2-.9.2-.4 0-.7-.1-1-.3-.6-.3-.9-.9-.9-1.6V43.4c0-.7.4-1.3.9-1.6.6-.3 1.3-.4 1.8-.1L58.1 48c.9.5 1.3 1.6.8 2.5 0 .4-.3.7-.7.9z" />
+                                    d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5v-11zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5H12z" />
+                                <path
+                                    d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z" />
                             </svg>
                         </a>
                     </div>
