--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -15,8 +15,8 @@
 
 <footer role="contentinfo" class="footer--main">
     <div class="container container--main">
-        <div class="container mb-3 text-center">
-            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 align-items-center">
+        <div class="container mb-4 text-center">
+            <div class="row row-cols-1 row-cols-lg-5 g-2 g-lg-3 align-items-center">
                 <div class="col">
                     <p class="card--title fs-4 mb-0 text-start">Читайте Special</p>
                 </div>
@@ -64,11 +64,33 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-wrap justify-content-center">
-            <a href="/about.html" class="footer--more footer--more-link ">Подробнее</a>
-            <a href="/privacy/" class="footer--more footer--more-link">Политики</a>
-            <a href="mailto:daniil@creagoo.ru" class="footer--more footer--more-link">daniil@creagoo.ru</a>
-            <a href="//it.dybka.ru" target="_blank" class="footer--more footer--more-link ">Проект от dybka.ru</a>
+        <div class="container mb-3 text-center">
+            <div class="row row-cols-1 fs-6 row-cols-lg-4 g-2 g-lg-3 align-items-center">
+                <div class="col">
+                    <div class="d-flex flex-wrap flex-column">
+                        <div><a href="/about.html" class="footer--more-link">О проекте</a></div>
+                        <div><a href="/privacy/" class="footer--more-link">Пользователю</a></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex flex-wrap flex-column">
+                        <div><a href="/updates.html" class="footer--more-link">Обновления</a></div>
+                        <div><a href="/translate.html" class="footer--more-link">Перевод сайта</a></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex flex-wrap flex-column">
+                        <div><a href="/rss.xml" class="footer--more-link">RSS статей</a></div>
+                        <div><a href="/updates.xml" class="footer--more-link">RSS обновлений</a></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="d-flex flex-wrap flex-column">
+                        <div><a href="mailto:daniil@dybka.ru" class="footer--more-link">daniil@dybka.ru</a></div>
+                        <div><a href="//dybka.ru" target="_blank" class="footer--more-link">Проект от dybka.ru</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
