--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -20,6 +20,16 @@
             <h1>Обновления Special</h1>
         </div>
         <div class="fs-5 mb-5">
+            <p class="text--more fs-6">Изменения 20.02.23</p>
+            <ul>
+                <li>Теперь в футере больше красоты и возможностей</li>
+                <li>Добавлены RSS-ленты</li>
+                <li>Работа над переводом сайта</li>
+                <li>Работа над возможностью создания постов</li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
             <p class="text--more fs-6">Изменения 18.02.23</p>
             <ul>
                 <li>Добавлена категория «Обновления»</li>
