--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -26,7 +26,7 @@
                 <li>Добавлены RSS-ленты</li>
                 <li>Работа над переводом сайта</li>
                 <li>Работа над возможностью создания постов</li>
-                <li></li>
+                <li>Работа над дополнительными изображениями в постах.</li>
             </ul>
         </div>
         <div class="fs-5 mb-5">
