--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,11 +9,17 @@
 
     })
 
+    <main>
+        @@include('../parts/p--main.html', {
+
+        })
+    </main>
+
     <div class="container py-5">
         <div class="row flex-lg-row-reverse align-items-center row-cols-1 row-cols-lg-2">
             <div class="col">
-                <img src="/img/content/main--special.png" class="d-block mx-lg-auto img-fluid" alt="Фотография 3д текста Спешиал"
-                    width="700" height="500">
+                <img src="/img/content/main--special.png" class="d-block mx-lg-auto img-fluid"
+                    alt="Фотография 3д текста Спешиал" width="700" height="500">
             </div>
             <div class="col">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы каждую неделю</h1>
@@ -30,7 +36,8 @@
                             О проекте
                         </a>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" class="ms-3" viewBox="0 0 16 16" fill="#9d9d9d">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" class="ms-3" viewBox="0 0 16 16"
+                        fill="#9d9d9d">
                         <path
                             d="M0 8a8 8 0 1 0 16 0A8 8 0 0 0 0 8zm5.904 2.803a.5.5 0 1 1-.707-.707L9.293 6H6.525a.5.5 0 1 1 0-1H10.5a.5.5 0 0 1 .5.5v3.975a.5.5 0 0 1-1 0V6.707l-4.096 4.096z" />
                     </svg>
@@ -38,25 +45,6 @@
             </div>
         </div>
     </div>
-
-    <main>
-        @@include('../parts/p--main.html', {
-
-        })
-
-        <!-- <div class="container">
-            <div class="mt-4">
-                <div class="d-flex flex-wrap justify-content-center align-items-center">
-                    <a href="/articles/" class="link fs-4">Смотреть еще</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#9d9d9d" class="ms-3"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
-                    </svg>
-                </div>
-            </div>
-        </div> -->
-    </main>
 
     @@include('../parts/footer.html', {
 
