--- a/src/html/p/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/p/experience-using-iphone-6s-for-six-months/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p009.jpg" class="img-fluid" alt="Телефон снимает фотографию">
+            <img src="/img/posts/p009.jpg" class="img-fluid w-100" alt="Телефон снимает фотографию">
             <figcaption class="img--desc">Телефон снимает фотографию</figcaption>
         </figure>
 
