--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p005.jpg" class="img-fluid" alt="Девушка выгорела на фото">
+            <img src="/img/posts/p005.jpg" class="img-fluid w-100" alt="Девушка выгорела на фото">
             <figcaption class="img--desc">Девушка выгорела на фото. Источник: Пикабу</figcaption>
         </figure>
 
