--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p004.jpg" class="img-fluid" alt="Фотография с кодом программиста">
+            <img src="/img/posts/p004.jpg" class="img-fluid w-100" alt="Фотография с кодом программиста">
             <figcaption class="img--desc">Фотография с кодом программиста</figcaption>
         </figure>
 
