--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p008.jpg" class="img-fluid" alt="Приоткрытая крышка ноутбука">
+            <img src="/img/posts/p008.jpg" class="img-fluid w-100" alt="Приоткрытая крышка ноутбука">
             <figcaption class="img--desc">Приоткрытая крышка ноутбука</figcaption>
         </figure>
 
@@ -153,6 +153,40 @@
                 «Завершить Safari» был недоступен. Мне пришлось выключить систему, после чего макбук предупредил меня об произошедшей
                 ошибки и предложил отправить отчет.
             </p>
+        </div>
+        <div id="getcar" class="carousel slide post--start-img">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/posts/p008/i001.jpg" loading="lazy" class="d-block img-fluid w-100" alt="Ноутбук на столе">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/posts/p008/i002.jpg" loading="lazy" class="d-block img-fluid w-100" alt="Ноутбук на столе">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/posts/p008/i003.jpg" loading="lazy" class="d-block img-fluid w-100"
+                        alt="Открытый сайт на ноутбуке">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/posts/p008/i004.jpg" loading="lazy" class="d-block img-fluid w-100"
+                        alt="Приоткрытая крышка ноутбука">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/posts/p008/i005.jpg" loading="lazy" class="d-block img-fluid w-100" alt="Ноутбук на столе">
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/posts/p008/i006.jpg" loading="lazy" class="d-block img-fluid w-100" alt="Ноутбук на столе">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#getcar" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#getcar" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="container--post">
             <h3>Модель макбука</h3>
             <p>
                 Мой выбор пал на Macbook Pro 13’ 2014. Не пугайтесь года выпуска, я смело решаю все задачи, связанные с
