--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p010.jpg" class="img-fluid" alt="Открытый код программы">
+            <img src="/img/posts/p010.jpg" class="img-fluid w-100" alt="Открытый код программы">
             <figcaption class="img--desc">Открытый код программы</figcaption>
         </figure>
 
