--- a/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p007.jpg" class="img-fluid" alt="Телефон лежит на столе">
+            <img src="/img/posts/p007.jpg" class="img-fluid w-100" alt="Телефон лежит на столе">
             <figcaption class="img--desc">Телефон лежит на столе</figcaption>
         </figure>
 
