--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
+            <img src="/img/posts/p001.jpg" class="img-fluid w-100" alt="Фотография ноутбука с открытым браузером">
             <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
         </figure>
 
