--- a/src/html/updates/creagoo/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/creagoo/novyy-sayt-creagoo-ru/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/updates/creagoo.jpg" class="img-fluid" alt="Фотография логотипа Creagoo">
+            <img src="/img/updates/creagoo.jpg" class="img-fluid w-100" alt="Фотография логотипа Creagoo">
             <figcaption class="img--desc">Фотография логотипа Creagoo</figcaption>
         </figure>
 
