--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -153,6 +153,16 @@
                     Статьи
                 </span>
             </a>
+            <a href="/updates/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+                <span class="d-flex flex-wrap align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z" />
+                    </svg>
+                    Обновления
+                </span>
+            </a>
             <button onClick="ChangeTheme()" aria-label="Открыть лучшие статьи" class="header--mobile-item border-0 text-start fs-4">
                 Сменить тему
             </button>
