--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -55,7 +55,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="header--adaptive-best">
+                    <div class="header--adaptive-best me-2">
                         <div class="text-invert btn-rounded fs-5">
                             <button onClick="ChangeBackground()"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
@@ -66,6 +66,19 @@
                                 </svg>
                                 Фон
                             </button>
+                        </div>
+                    </div>
+                    <div class="header--adaptive-best">
+                        <div class="text-invert btn-rounded fs-5">
+                            <a href="/article.html"
+                                class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                                </svg>
+                                Написать
+                            </a>
                         </div>
                     </div>
                     <div class="header--adaptive-more">
