--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -95,7 +95,11 @@
     </div>
 </footer>
 
-<script src="/js/bg.js"></script>
+@@if(context.noBG != "no") {
+    <script src="/js/bg.js"></script>
+}
+
+
 <script src="/js/theme.js"></script>
 <script src="/js/privacy.js"></script>
 <script src="/js/popper.min.js"></script>
