--- a/src/html/article.html
+++ b/src/html/article.html
@@ -66,6 +66,17 @@
                 </p>
             </div>
         </div>
+
+        <div class="container--main">
+            <form action="/sendpost.php" method="post">
+                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Название поста" aria-label="Название поста">
+                <textarea class="form-control fs-5" placeholder="Содержание" rows="4">&lt;!-- Название --&gt;
+Название записи
+Параграф записи.
+                </textarea>
+            </form>
+        </div>
+
     </main>
 
     @@include('../parts/footer.html', {
