--- a/src/html/article.html
+++ b/src/html/article.html
@@ -70,10 +70,11 @@
         <div class="container--main">
             <form action="/sendpost.php" method="post">
                 <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Название поста" aria-label="Название поста">
-                <textarea class="form-control fs-5" placeholder="Содержание" rows="4">&lt;!-- Название --&gt;
+                <textarea class="form-control mb-3 fs-5" placeholder="Содержание" rows="4">&lt;!-- Название --&gt;
 Название записи
 Параграф записи.
                 </textarea>
+                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Почта для уведомлений" aria-label="Почта для уведомлений">
             </form>
         </div>
 
