--- a/src/html/article.html
+++ b/src/html/article.html
@@ -74,7 +74,17 @@
 Название записи
 Параграф записи.
                 </textarea>
-                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Почта для уведомлений" aria-label="Почта для уведомлений">
+                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Ваше имя" aria-label="Ваше имя">
+                <input class="form-control form-control-lg fs-5 mb-3" type="email" placeholder="Почта для уведомлений" aria-label="Почта для уведомлений">
+                <div class="form-check mb-3 fs-5">
+                    <input class="form-check-input" type="checkbox" value="1" id="ch1">
+                    <label class="form-check-label" for="ch1">
+                        Согласие с <a href="/privacy/policy.html" class="link">политикой конфиденциальности</a>
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-lg mb-3 btn-success">
+                    Отправить на модерацию
+                </button>
             </form>
         </div>
 
