--- a/src/html/article.html
+++ b/src/html/article.html
@@ -69,15 +69,14 @@
 
         <div class="container--main">
             <form action="/sendpost.php" method="post">
-                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Название поста" aria-label="Название поста">
-                <textarea class="form-control mb-3 fs-5" placeholder="Содержание" rows="4">&lt;!-- Название --&gt;
+                <input name="namepost" class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Название поста" aria-label="Название поста">
+                <textarea name="contentpost" class="form-control mb-3 fs-5" placeholder="Содержание" rows="4">&lt;!-- Название --&gt;
 Название записи
-Параграф записи.
-                </textarea>
-                <input class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Ваше имя" aria-label="Ваше имя">
-                <input class="form-control form-control-lg fs-5 mb-3" type="email" placeholder="Почта для уведомлений" aria-label="Почта для уведомлений">
+Параграф записи.</textarea>
+                <input name="username" class="form-control form-control-lg fs-5 mb-3" type="text" placeholder="Ваше имя" aria-label="Ваше имя">
+                <input name="useremail" class="form-control form-control-lg fs-5 mb-3" type="email" placeholder="Почта для уведомлений" aria-label="Почта для уведомлений">
                 <div class="form-check mb-3 fs-5">
-                    <input class="form-check-input" type="checkbox" value="1" id="ch1">
+                    <input name="check" class="form-check-input" type="checkbox" value="1" id="ch1">
                     <label class="form-check-label" for="ch1">
                         Согласие с <a href="/privacy/policy.html" class="link">политикой конфиденциальности</a>
                     </label>
