--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -2,8 +2,10 @@
     <div class="container-fluid">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
             <div class="header--logo-margin">
-                <a href="/" aria-label="Перейти на главную страницу" class="d-flex align-items-center col-md-12 text-decoration-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo-pc header--logo" viewBox="0 0 1211.79 303.25">
+                <a href="/" aria-label="Перейти на главную страницу"
+                    class="d-flex align-items-center col-md-12 text-decoration-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo-pc header--logo"
+                        viewBox="0 0 1211.79 303.25">
                         <path
                             d="M877.07 167.05a62 62 0 0 1-13.94 31.84 76.34 76.34 0 0 1-29.5 21.48q-18 7.65-40.24 7.65-25.17 0-44.3-9.26t-29.87-26q-10.74-16.78-10.74-38.5 0-22 10.74-38.63t29.87-26.05q19.13-9.37 44.3-9.38 22.22 0 40.24 7.78a78.08 78.08 0 0 1 29.5 21.47 61.56 61.56 0 0 1 13.94 32h-41.22q-3.21-14.31-14.69-22.09t-27.77-7.78q-13.08 0-22.83 5.06a34.94 34.94 0 0 0-14.93 14.57q-5.19 9.5-5.19 23.08 0 13.32 5.19 22.83a34.86 34.86 0 0 0 14.93 14.56q9.75 5.07 22.83 5.06 16.55 0 28-8.14a34.85 34.85 0 0 0 14.44-21.48ZM919.79 67.82q-11.12 0-18.14-5.8a19 19 0 0 1-7-15.43q0-9.87 7-15.67t18.14-5.8q11.34 0 18.26 5.8t6.92 15.67q0 9.63-6.92 15.43t-18.26 5.8ZM899.3 82.39l20.49 3.94 20.73-3.94v141.93h-41.23ZM1111.08 154.22q-4 22.22-14.44 38.87a75.44 75.44 0 0 1-26.41 25.8 70.51 70.51 0 0 1-35.67 9.13q-20.49 0-36.29-9.26a63.79 63.79 0 0 1-24.56-25.91q-8.76-16.67-8.76-38.63 0-22.21 8.76-38.88a63.75 63.75 0 0 1 24.56-25.92q15.8-9.25 36.29-9.26a70.41 70.41 0 0 1 35.67 9.14 76.41 76.41 0 0 1 26.56 25.79q10.59 16.66 14.29 39.13Zm-104.42 0a45 45 0 0 0 5.07 21.72 37.4 37.4 0 0 0 13.94 14.68 39.18 39.18 0 0 0 20.49 5.31 46.79 46.79 0 0 0 21.84-5.31 59.24 59.24 0 0 0 18.15-14.68 70.51 70.51 0 0 0 12.34-21.72 72.12 72.12 0 0 0-12.34-21.85 58.68 58.68 0 0 0-18.15-14.81 46.79 46.79 0 0 0-21.84-5.31 39.18 39.18 0 0 0-20.49 5.31 37.29 37.29 0 0 0-13.94 14.81 45.73 45.73 0 0 0-5.07 21.85Zm93.56 70.1-5.93-51.34 6.67-18.76-6.67-18.54 5.93-51.83h42.7l-8.13 70.37 8.14 70.1ZM1170.57 34.25h41.22v190.07h-41.22Z" />
                         <path
@@ -18,7 +20,8 @@
                         <path
                             d="M627.27 196.92q-17.52 0-29.86-5.43a39.27 39.27 0 0 1-21.52-21.12l-36.61 18.75c.71 1.22 1.43 2.43 2.22 3.6q11.22 16.8 30.85 26t44.56 9.26a133.84 133.84 0 0 0 38.88-5.51 109.66 109.66 0 0 0 32.22-15.43v-27.65a104.68 104.68 0 0 1-28.88 13 115.77 115.77 0 0 1-31.86 4.53ZM680.02 117.02l-30.55 15.66a45.76 45.76 0 0 1 2.36 7h-16l-53.48 27.4h109.33q0-26.4-9.5-45.91c-.67-1.44-1.39-2.8-2.16-4.15Z" />
                     </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo-mobile header--logo" viewBox="0 0 907.48 303.25">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon header--logo-mobile header--logo"
+                        viewBox="0 0 907.48 303.25">
                         <path
                             d="M453.46 116.77a39.18 39.18 0 0 0-20.49-5.31 47.55 47.55 0 0 0-22 5.31 56.75 56.75 0 0 0-18.14 14.81 73.63 73.63 0 0 0-12.22 21.84 71.94 71.94 0 0 0 12.26 21.73 57.27 57.27 0 0 0 18.14 14.68 47.55 47.55 0 0 0 22 5.31 39.18 39.18 0 0 0 20.45-5.31 37.49 37.49 0 0 0 14-14.68 45.13 45.13 0 0 0 5-21.73 45.83 45.83 0 0 0-5-21.84 37.38 37.38 0 0 0-14-14.81Z" />
                         <path
@@ -29,14 +32,18 @@
 
             <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
                 @@if(context.activeItem == "posts") {
-                    <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Статьи</p></li>
+                <li class="mx-2 px-3">
+                    <p class="nav-link header--nav-link-active mb-0">Статьи</p>
+                </li>
                 }
                 @@if(context.activeItem != "posts") {
-                    <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
+                <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
                 }
 
                 @@if(context.activeItem == "updates") {
-                <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Обновления</p></li>
+                <li class="mx-2 px-3">
+                    <p class="nav-link header--nav-link-active mb-0">Обновления</p>
+                </li>
                 }
                 @@if(context.activeItem != "updates") {
                 <li class="mx-2 px-3"><a href="/updates/" class="nav-link header--nav-link">Обновления</a></li>
@@ -47,8 +54,10 @@
                 <div class="d-flex justify-content-end">
                     <div class="header--adaptive-best me-2">
                         <div class="text-invert btn-rounded fs-5">
-                            <button onClick="ChangeThemeButton()" class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
+                            <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему"
+                                class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    class="icon-invert me-btn-1" viewBox="0 0 16 16">
                                     <use id="changethemesvg" xlink:href="/img/icons/theme.svg#light"></use>
                                 </svg>
                                 Тема
@@ -57,10 +66,10 @@
                     </div>
                     <div class="header--adaptive-best me-2">
                         <div class="text-invert btn-rounded fs-5">
-                            <button onClick="ChangeBackground()"
+                            <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
-                                    viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    class="icon-invert me-btn-1" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                                 </svg>
@@ -70,22 +79,24 @@
                     </div>
                     <div class="header--adaptive-best">
                         <div class="text-invert btn-rounded fs-5">
-                            <a href="/article.html"
+                            <a href="//id.creagoo.ru" target="_blank" aria-label="Открыть личный кабинет"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
-                                    viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                    class="icon-invert me-btn-1" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
-                                Написать
+                                Статья
                             </a>
                         </div>
                     </div>
                     <div class="header--adaptive-more">
                         <button data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-controls="mobileMenu"
-                            class="btn header--invert-bg btn-dark text-invert btn-rounded fs-5 ms-2 px-4 header--best-p">
+                            class="btn header--invert-bg btn-dark text-invert btn-rounded fs-5 ms-2 px-4 header--best-p"
+                            aria-label="Открыть мобильное меню">
                             <span class="d-flex align-items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert"
+                                    viewBox="0 0 16 16">
                                     <path
                                         d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
                                 </svg>
@@ -98,10 +109,10 @@
     </div>
 </header>
 
-<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px"
-    id="mobileMenu" aria-labelledby="mobileMenuLabel">
+<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px" id="mobileMenu"
+    aria-labelledby="mobileMenuLabel">
     <div class="offcanvas-header pt-4">
-        <button type="button" class="ms-auto btn" data-bs-dismiss="offcanvas" aria-label="Close">
+        <button type="button" class="ms-auto btn" data-bs-dismiss="offcanvas" aria-label="Закрыть мобильное меню">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" style="fill: var(--btn-light-click)"
                 viewBox="0 0 16 16">
                 <path
@@ -111,52 +122,7 @@
     </div>
     <div class="offcanvas-body">
         <div class="d-flex flex-wrap flex-column">
-            <!-- <a href="/best/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
-                <span class="d-flex flex-wrap align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
-                    </svg>
-                    Лучшее
-                </span>
-            </a>
-            <a href="/aquarium/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
-                <span class="d-flex flex-wrap align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
-                        viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                        <path fill-rule="evenodd"
-                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                    </svg>
-                    Кабинет
-                </span>
-            </a>
-            <a href="/creagoo/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
-                <span class="d-flex flex-wrap align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M11.5 6.027a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm2.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm-6.5-3h1v1h1v1h-1v1h-1v-1h-1v-1h1v-1z" />
-                        <path
-                            d="M3.051 3.26a.5.5 0 0 1 .354-.613l1.932-.518a.5.5 0 0 1 .62.39c.655-.079 1.35-.117 2.043-.117.72 0 1.443.041 2.12.126a.5.5 0 0 1 .622-.399l1.932.518a.5.5 0 0 1 .306.729c.14.09.266.19.373.297.408.408.78 1.05 1.095 1.772.32.733.599 1.591.805 2.466.206.875.34 1.78.364 2.606.024.816-.059 1.602-.328 2.21a1.42 1.42 0 0 1-1.445.83c-.636-.067-1.115-.394-1.513-.773-.245-.232-.496-.526-.739-.808-.126-.148-.25-.292-.368-.423-.728-.804-1.597-1.527-3.224-1.527-1.627 0-2.496.723-3.224 1.527-.119.131-.242.275-.368.423-.243.282-.494.575-.739.808-.398.38-.877.706-1.513.773a1.42 1.42 0 0 1-1.445-.83c-.27-.608-.352-1.395-.329-2.21.024-.826.16-1.73.365-2.606.206-.875.486-1.733.805-2.466.315-.722.687-1.364 1.094-1.772a2.34 2.34 0 0 1 .433-.335.504.504 0 0 1-.028-.079zm2.036.412c-.877.185-1.469.443-1.733.708-.276.276-.587.783-.885 1.465a13.748 13.748 0 0 0-.748 2.295 12.351 12.351 0 0 0-.339 2.406c-.022.755.062 1.368.243 1.776a.42.42 0 0 0 .426.24c.327-.034.61-.199.929-.502.212-.202.4-.423.615-.674.133-.156.276-.323.44-.504C4.861 9.969 5.978 9.027 8 9.027s3.139.942 3.965 1.855c.164.181.307.348.44.504.214.251.403.472.615.674.318.303.601.468.929.503a.42.42 0 0 0 .426-.241c.18-.408.265-1.02.243-1.776a12.354 12.354 0 0 0-.339-2.406 13.753 13.753 0 0 0-.748-2.295c-.298-.682-.61-1.19-.885-1.465-.264-.265-.856-.523-1.733-.708-.85-.179-1.877-.27-2.913-.27-1.036 0-2.063.091-2.913.27z" />
-                    </svg>
-                    Игры
-                </span>
-            </a>
-            <a href="/virtualreality/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
-                <span class="d-flex flex-wrap align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M8 1.248c1.857 0 3.526.641 4.65 1.794a4.978 4.978 0 0 1 2.518 1.09C13.907 1.482 11.295 0 8 0 4.75 0 2.12 1.48.844 4.122a4.979 4.979 0 0 1 2.289-1.047C4.236 1.872 5.974 1.248 8 1.248z" />
-                        <path
-                            d="M12 12a3.988 3.988 0 0 1-2.786-1.13l-.002-.002a1.612 1.612 0 0 0-.276-.167A2.164 2.164 0 0 0 8 10.5c-.414 0-.729.103-.935.201a1.612 1.612 0 0 0-.277.167l-.002.002A4 4 0 1 1 4 4h8a4 4 0 0 1 0 8z" />
-                    </svg>
-                    VR
-                </span>
-            </a> -->
-            <a href="/articles/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+            <a href="/articles/" aria-label="Открыть все статьи" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -166,7 +132,7 @@
                     Статьи
                 </span>
             </a>
-            <a href="/updates/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+            <a href="/updates/" aria-label="Открыть статьи про обновления" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -176,12 +142,39 @@
                     Обновления
                 </span>
             </a>
-            <button onClick="ChangeTheme()" aria-label="Открыть лучшие статьи" class="header--mobile-item border-0 text-start fs-4">
+            <button onClick="ChangeTheme()" aria-label="Сменить темную и светлую тему"
+                class="header--mobile-item border-0 text-start fs-4">
                 Сменить тему
             </button>
-            <button onClick="ChangeBackground()" aria-label="Открыть лучшие статьи" class="header--mobile-item border-0 text-start fs-4">
+            <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
+                class="header--mobile-item header--mobile-last-item border-0 text-start fs-4">
                 Сменить фон
             </button>
+
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                О проекте
+            </a>
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                Пользователю
+            </a>
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                Обновления
+            </a>
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                Перевод сайта
+            </a>
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                RSS статей
+            </a>
+            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+                RSS обновлений
+            </a>
+            <div aria-label="#" class="header--mobile-text fs-6">
+                daniil@dybka.ru
+            </div>
+            <div aria-label="#" class="header--mobile-text fs-6">
+                Проект от dybka.ru
+            </div>
         </div>
     </div>
 </div>
