work at adaptive

--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -64,27 +64,27 @@
                 </div>
             </div>
         </div>
-        <div class="container mb-3 text-center">
+        <div class="container header--adaptive-nav mb-3 text-center">
             <div class="row row-cols-1 fs-6 row-cols-lg-4 g-2 g-lg-3 align-items-center">
-                <div class="col">
+                <div class="col header--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/about.html" class="footer--more-link">О проекте</a></div>
                         <div><a href="/privacy/" class="footer--more-link">Пользователю</a></div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col header--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/updates.html" class="footer--more-link">Обновления</a></div>
                         <div><a href="/translate.html" class="footer--more-link">Перевод сайта</a></div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col header--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/rss.xml" class="footer--more-link">RSS статей</a></div>
                         <div><a href="/updates.xml" class="footer--more-link">RSS обновлений</a></div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col header--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="mailto:daniil@dybka.ru" class="footer--more-link">daniil@dybka.ru</a></div>
                         <div><a href="//dybka.ru" target="_blank" class="footer--more-link">Проект от dybka.ru</a></div>
@@ -98,7 +98,6 @@
 @@if(context.noBG != "no") {
     <script src="/js/bg.js"></script>
 }
-
 
 <script src="/js/theme.js"></script>
 <script src="/js/privacy.js"></script>
