--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -52,7 +52,7 @@
 
             <div class="col-md-3 me-2">
                 <div class="d-flex justify-content-end">
-                    <div class="header--adaptive-best me-2">
+                    <div class="header--adaptive-button me-2">
                         <div class="text-invert btn-rounded fs-5">
                             <button onClick="ChangeThemeButton()" aria-label="Сменить темную и светлую тему"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
@@ -64,7 +64,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="header--adaptive-best me-2">
+                    <div class="header--adaptive-button me-2">
                         <div class="text-invert btn-rounded fs-5">
                             <button onClick="ChangeBackground()" aria-label="Сменить задний фон"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
@@ -77,7 +77,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="header--adaptive-best">
+                    <div class="header--adaptive-button">
                         <div class="text-invert btn-rounded fs-5">
                             <a href="//id.creagoo.ru" target="_blank" aria-label="Открыть личный кабинет"
                                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
@@ -151,22 +151,22 @@
                 Сменить фон
             </button>
 
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/about.html" aria-label="Открыть страницу о проекте" class="header--mobile-more fs-5">
                 О проекте
             </a>
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/privacy/" aria-label="Открыть страницу для пользователя" class="header--mobile-more fs-5">
                 Пользователю
             </a>
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/updates.html" aria-label="Открыть обновления сайта" class="header--mobile-more fs-5">
                 Обновления
             </a>
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/translate.html" aria-label="Открыть перевод сайта" class="header--mobile-more fs-5">
                 Перевод сайта
             </a>
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/rss.xml" aria-label="Открыть rss статей" class="header--mobile-more fs-5">
                 RSS статей
             </a>
-            <a href="/updates/" aria-label="#" class="header--mobile-more fs-5">
+            <a href="/updates.xml" aria-label="Открыть rss обновлений" class="header--mobile-more fs-5">
                 RSS обновлений
             </a>
             <div aria-label="#" class="header--mobile-text fs-6">
