--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,11 +24,8 @@
             <div class="col">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Эксклюзивные материалы каждую неделю</h1>
                 <p class="fs-5">
-                    Читайте статьи про программирование. В удобном формате: Телеграм, Яндекс Дзен,
+                    Читайте статьи на разные темы в удобном формате: Телеграм, Яндекс Дзен,
                     news.dybka.ru.
-                </p>
-                <p class="fs-5">
-                    Занимайте время полезной информацией вместе со Спешиал.
                 </p>
                 <div class="d-flex align-items-center">
                     <div>
