--- a/src/parts/p--articles.html
+++ b/src/parts/p--articles.html
@@ -78,5 +78,13 @@
                 </div>
             </a>
         </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/updates/creagoo/novyy-sayt-creagoo-ru" class="card card--link card--rounded border-0">
+                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
