--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -5,9 +5,12 @@
                 <p class="text-white--adaptive mb-0">Мы используем файлы cookie для Вашего удобства</p>
             </div>
             <div>
-                <button onClick="CommitPrivacy()" class="btn btn-dark footer--change-theme footer--text-invert">
-                    Хорошо
-                </button>
+                <div class="text-invert btn-rounded fs-5">
+                    <button onClick="CommitPrivacy()" aria-label="Уменьшить размер шрифта на сайте"
+                        class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                        Хорошо
+                    </button>
+                </div>
             </div>
         </div>
     </div>
