--- a/src/html/about.html
+++ b/src/html/about.html
@@ -43,50 +43,85 @@
 
             <h2>Что такое Special?</h2>
             <p>
-                Special — это открытый источник медиа от сайта <a href="//dybka.ru" class="link">dybka.ru</a>,
-                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других сайтов,
+                Special — это открытый источник медиа сайтов <a href="//dybka.ru" class="link">dybka.ru</a>,
+                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других,
                 принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
             </p>
             <p>
-                Главная задача сайта Special — простым языком удобными методами доносить полезную информацию для людей.
-                Когда читать полезную информацию — выбор за Вами, очень удобно во время ожидания пробежаться
-                по одной-второй статье из списка «Интересные». Или целенаправленно просматривать обновления на
-                главной странице.
+                Главная задача сайта Special — простым языком и удобными способами доносить полезную информацию до людей.
+                Сайт Special предоставляет удобный доступ к чтению статей. Выбор, на какой платформе производить чтение
+                находится за Вами.
             </p>
         </div>
         <div class="fs-5 mb-5">
             <h2>Стать автором</h2>
             <p>
-                У Вас есть возможность предложить интересную статью или тему для обсуждения. Для
-                добавления Вас в качестве автора на сайте медиа Special достаточно обратиться
+                У Вас есть возможность предложить интересную статью для сайта Special. Для
+                добавления Вас в качестве автора на сайте Special достаточно обратиться
                 на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
             </p>
             <p>
-                Ваша заявка будет рассмотрена. В случае успеха поста будет предложено выбрать
-                аватарку для отображения на страницах и Ваш пост будет опубликован
-                на сайте Special.
+                К заявке на почтовый адрес Вам следует прикрепить следующие материалы: название поста, содержимое поста
+                (в содержимом укажите, что является текстом, а что названием), фотографию поста.
+            </p>
+            <p>
+                Также нужно будет указать Ваше имя, фамилию и желаемую аватарку (128x128), которая будет отображаться
+                на Вашей странице автора статей.
+            </p>
+            <p>
+                Ваша заявка будет рассмотрена. В случае положительной проверки
+                Ваш пост будет опубликован на сайте Special.
             </p>
         </div>
         <div class="fs-5 mb-5">
             <h2>Запрещенные темы</h2>
             <p>
-                На сайте Special ведется активная борьба с ненормативной лексикой, оскорблениями,
+                На сайте Special запрещено выкладывать материалы с ненормативной лексикой, оскорблениями,
                 разжиганием ненависти. На обсуждение запрещены: темы войны, темы религии, «острые» темы и прочие,
                 которые могут вызвать общих негатив у людей.
             </p>
             <p>
-                Главная цель медиа Special — донести информацию для людей удобным способом. Сюда не
-                входят задачи разжигания ненависти и оскорбления людей. Все публикуемые посты проходят
-                проверку модераторами. Опубликовать пост без согласия не представляется возможным.
+                Для публикации запрещены рекламные посты без согласования модераторов на их публикацию.
+                Любое наличие рекламных отображений и прочего будет являться причиной для отказа
+                публикации материала.
+            </p>
+            <p>
+                Все публикуемые посты проходят проверку модераторами. Опубликовать пост без согласия
+                модераторов не предоставляется возможным.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Реклама на сайте</h2>
+            <p>
+                На сайте медиа Special у Вас есть возможность заказать рекламу. Вам следует обратиться
+                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+            </p>
+            <p>
+                Свяжитесь по почтовому адресу, опишите Ваше предложение. Также укажите формат, в котором
+                Вы хотите видеть рекламу. В случае одобрения публикации рекламы, медиа Special выполнит
+                Ваши требования по публикации рекламы на сайте медиа Special.
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Запрещено к рекламе</h2>
+            <p>
+                К рекламе запрещены все темы, являющиеся запрещенными на территории РФ. В случае с
+                медиа Special запрещены для рекламы: запрещенные средства, продукты 18+,
+                различные казино, букмекерские компании, платформы, в основе которых лежит
+                обман пользователей.
+            </p>
+            <p>
+                В том случае, если Ваш продукт не несет целей обмануть аудиторию, заработать на этом
+                и не является запрещенным на территории РФ и на сайте Special, то Вы можете рассчитывать
+                на публикацию рекламы, в случае заинтересованности с обеих сторон (Вашей и медиа Special).
             </p>
         </div>
         <div class="fs-5 mb-5">
             <h2>Безопастность сайта</h2>
             <p>
-                Домен news.dybka.ru использует защищенный метод подключения, используется SSL-сертификат для
-                безопастного и быстрого обмена содержимым с сайтом. Страницы сайта формируются до публикации.
-                Сайт Special не использует базу данных для получения информации, что обеспечивает
-                надежное получение содержимого статей.
+                Доменный адрес использует защищенный протокол подключения. Используется SSL-сертификат для
+                безопастного и быстрого подключения и получения информации. Страницы сайта формируются
+                до публикации и являются «статическими».
             </p>
         </div>
         <div class="fs-5 mb-5">
@@ -102,7 +137,7 @@
             </p>
             <p>
                 Активно уделяется внимание пользователю. Существует большое количество людей, которые тестируют отображение сайта. Это
-                действительно важные факторы, которые заставляют пользователей оставаться на сайте большее количество времени.
+                действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
             </p>
         </div>
         <div class="fs-5 mb-5">
@@ -124,7 +159,7 @@
         <div class="fs-5 mb-5">
             <h2>Шрифты</h2>
             <p>
-                На сайте используется шрифт Unbounded начертания Regular для заголовка.
+                На сайте используется шрифт Unbounded начертания Regular для заголовков.
             </p>
             <p>
                 На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
