--- a/src/html/about.html
+++ b/src/html/about.html
@@ -159,7 +159,7 @@
         <div class="fs-5 mb-5">
             <h2>Шрифты</h2>
             <p>
-                На сайте используется шрифт Unbounded начертания Regular для заголовков.
+                На сайте используется шрифт MenorahGrotesk начертания Bold для заголовков.
             </p>
             <p>
                 На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
