--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -6,7 +6,7 @@
 <style>
     .text--more {
         margin-bottom: 5px;
-        font-family: Unbounded !important;
+        font-family: MenorahGrotesk !important;
     }
 </style>
 
@@ -18,6 +18,12 @@
     <main class="container">
         <div class="border-bottom mb-5">
             <h1>Обновления Special</h1>
+        </div>
+        <div class="fs-5 mb-5">
+            <p class="text--more fs-6">Изменения 17.03.23</p>
+            <ul>
+                <li>Смена активного шрифта на сайте.</li>
+            </ul>
         </div>
         <div class="fs-5 mb-5">
             <p class="text--more fs-6">Изменения 20.02.23</p>
