--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -33,20 +33,20 @@
             <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
                 @@if(context.activeItem == "posts") {
                 <li class="mx-2 px-3">
-                    <p class="nav-link header--nav-link-active mb-0">Статьи</p>
+                    <p class="nav-link header--nav-link-active h3 mb-0">Статьи</p>
                 </li>
                 }
                 @@if(context.activeItem != "posts") {
-                <li class="mx-2 px-3"><a href="/articles/" class="nav-link header--nav-link">Статьи</a></li>
+                <li class="mx-2 px-3"><a href="/articles/" class="nav-link h3 header--nav-link">Статьи</a></li>
                 }
 
                 @@if(context.activeItem == "updates") {
                 <li class="mx-2 px-3">
-                    <p class="nav-link header--nav-link-active mb-0">Обновления</p>
+                    <p class="nav-link header--nav-link-active h3 mb-0">Обновления</p>
                 </li>
                 }
                 @@if(context.activeItem != "updates") {
-                <li class="mx-2 px-3"><a href="/updates/" class="nav-link header--nav-link">Обновления</a></li>
+                <li class="mx-2 px-3"><a href="/updates/" class="nav-link h3 header--nav-link">Обновления</a></li>
                 }
             </ul>
 
